--- a/pom.xml
+++ b/pom.xml
@@ -2025,6 +2025,10 @@
 
           <!-- pull this in when needed; the explicit definition culls the surplus-->
           <exclusion>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+          <exclusion>
             <groupId>${hive.group}</groupId>
             <artifactId>hive-metastore</artifactId>
           </exclusion>
